--- a/AppDevelopment0805.csproj
+++ b/AppDevelopment0805.csproj
@@ -256,6 +256,7 @@
     <Content Include="Views\Categories\Details.cshtml" />
     <Content Include="Views\Courses\Index.cshtml" />
     <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
