--- a/AppDevelopment0805.csproj
+++ b/AppDevelopment0805.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -183,6 +184,10 @@
     <Compile Include="Migrations\202110131607199_createCourseTable.Designer.cs">
       <DependentUpon>202110131607199_createCourseTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110190802050_CreateTraineeTable.cs" />
+    <Compile Include="Migrations\202110190802050_CreateTraineeTable.Designer.cs">
+      <DependentUpon>202110190802050_CreateTraineeTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -190,7 +195,11 @@
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Staff.cs" />
+    <Compile Include="Models\Trainee.cs" />
+    <Compile Include="Models\Trainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Roles\Role.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseCategoriesViewModel.cs" />
   </ItemGroup>
@@ -260,6 +269,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -280,6 +290,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110131607199_createCourseTable.resx">
       <DependentUpon>202110131607199_createCourseTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110190802050_CreateTraineeTable.resx">
+      <DependentUpon>202110190802050_CreateTraineeTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
