Admin-Done-CRUD staff account and changePass

--- a/AppDevelopment0805.csproj
+++ b/AppDevelopment0805.csproj
@@ -197,6 +197,7 @@
     <Compile Include="ViewModels\CourseCategoriesViewModel.cs" />
     <Compile Include="ViewModels\CreateStaffViewModel.cs" />
     <Compile Include="ViewModels\CreateTrainerViewModel.cs" />
+    <Compile Include="ViewModels\PasswordViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -265,6 +266,7 @@
     <Content Include="Views\Admin\CreateTrainer.cshtml" />
     <Content Include="Views\Admin\AddStaff.cshtml" />
     <Content Include="Views\Admin\EditStaff.cshtml" />
+    <Content Include="Views\Admin\StaffChangePassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
