--- a/AppDevelopment0805.csproj
+++ b/AppDevelopment0805.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\StaffsController.cs" />
+    <Compile Include="Controllers\TraineesController.cs" />
     <Compile Include="Controllers\TrainersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -202,6 +203,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseCategoriesViewModel.cs" />
     <Compile Include="ViewModels\CreateStaffViewModel.cs" />
+    <Compile Include="ViewModels\CreateTraineeViewModel.cs" />
     <Compile Include="ViewModels\CreateTrainerViewModel.cs" />
     <Compile Include="ViewModels\PasswordViewModel.cs" />
     <Compile Include="ViewModels\TrainersCourseViewModel.cs" />
@@ -277,10 +279,14 @@
     <Content Include="Views\Trainers\Index.cshtml" />
     <Content Include="Views\Admin\AddTrainers.cshtml" />
     <Content Include="Views\Admin\TrainerChangePassword.cshtml" />
+    <Content Include="Views\Staffs\AddTrainee.cshtml" />
+    <Content Include="Views\Staffs\CreateTrainee.cshtml" />
+    <Content Include="Views\Admin\EditTrainer.cshtml" />
+    <Content Include="Views\Staffs\EditTrainee.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Staffs\" />
+    <Folder Include="Views\Trainees\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
