--- a/AppDevelopment0805.csproj
+++ b/AppDevelopment0805.csproj
@@ -187,6 +187,10 @@
     <Compile Include="Migrations\202110271413345_addtrainer.Designer.cs">
       <DependentUpon>202110271413345_addtrainer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110311043000_trainertraineecourse.cs" />
+    <Compile Include="Migrations\202110311043000_trainertraineecourse.Designer.cs">
+      <DependentUpon>202110311043000_trainertraineecourse.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -196,16 +200,20 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Staff.cs" />
     <Compile Include="Models\Trainee.cs" />
+    <Compile Include="Models\TraineesCourse.cs" />
     <Compile Include="Models\Trainer.cs" />
-    <Compile Include="Models\TrainerCourse.cs" />
+    <Compile Include="Models\TrainersCourse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roles\Role.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseCategoriesViewModel.cs" />
+    <Compile Include="ViewModels\CourseTraineesViewModel.cs" />
+    <Compile Include="ViewModels\CourseTrainersViewModel.cs" />
     <Compile Include="ViewModels\CreateStaffViewModel.cs" />
     <Compile Include="ViewModels\CreateTraineeViewModel.cs" />
     <Compile Include="ViewModels\CreateTrainerViewModel.cs" />
     <Compile Include="ViewModels\PasswordViewModel.cs" />
+    <Compile Include="ViewModels\TraineesCourseViewModel.cs" />
     <Compile Include="ViewModels\TrainersCourseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -283,6 +291,7 @@
     <Content Include="Views\Staffs\CreateTrainee.cshtml" />
     <Content Include="Views\Admin\EditTrainer.cshtml" />
     <Content Include="Views\Staffs\EditTrainee.cshtml" />
+    <Content Include="Views\Trainers\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -307,6 +316,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110271413345_addtrainer.resx">
       <DependentUpon>202110271413345_addtrainer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110311043000_trainertraineecourse.resx">
+      <DependentUpon>202110311043000_trainertraineecourse.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
