--- a/AppDevelopment0805.csproj
+++ b/AppDevelopment0805.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\202110311043000_trainertraineecourse.Designer.cs">
       <DependentUpon>202110311043000_trainertraineecourse.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111011243225_update b.cs" />
+    <Compile Include="Migrations\202111011243225_update b.Designer.cs">
+      <DependentUpon>202111011243225_update b.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -319,6 +323,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110311043000_trainertraineecourse.resx">
       <DependentUpon>202110311043000_trainertraineecourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111011243225_update b.resx">
+      <DependentUpon>202111011243225_update b.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
